deploy/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caerora
spec:
  tls:
    - hosts:
        - dev.caerora.com
      secretName: caerora-tls
  rules:
    - host: dev.caerora.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
